# aRibeiroData

./: CMakeLists.txt  README.md
cmake/: 01_tools.cmake
cmake/libs/: aRibeiroWrappers.cmake  libaRibeiroCore.cmake  libaRibeiroData.cmake  libaRibeiroPlatform.cmake  libjpeg.cmake  libmd5.cmake  libpng.cmake  librandom.cmake  libzlib.cmake
docs/: index.md
docs/aRibeiroData/: 3d-model-container.md  feature-binary-stream.md  feature-read-write-image.md  font-writer-reader.md  pixel-based-atlas-creator.md
src/: aRibeiroData.h.in
src/atlas/: Atlas.cpp  Atlas.h  AtlasElement.cpp  AtlasElement.h  AtlasRect.cpp  AtlasRect.h
src/font/: FontReader.cpp  FontReader.h  FontReaderBitmapRef.cpp  FontReaderBitmapRef.h  FontReaderGlyph.cpp  FontReaderGlyph.h  FontReaderSize.cpp  FontReaderSize.h  FontWriter.cpp  FontWriter.h  FontWriterGlyph.cpp  FontWriterGlyph.h
src/image/: JPGHelper.cpp  JPGHelper.h  PNGHelper.cpp  PNGHelper.h
src/io/: BinaryReader.cpp  BinaryReader.h  BinaryWriter.cpp  BinaryWriter.h
src/model/: Animation.h  Bone.h  Camera.h  Geometry.h  Light.h  Material.h  ModelContainer.h  Node.h  NodeAnimation.h  QuatKey.h  Texture.h  Vec3Key.h
